--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=agriflux-batch
 
-spring.datasource.url=jdbc:h2:mem:testdb
+server.port=8081
+
+spring.datasource.url=jdbc:h2:mem:batchDb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=batch
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
