Censito nuovo servizio + modificati file input di prova colture e produzione

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=agriflux-batch
 
 server.port=8081
 
-spring.datasource.url=jdbc:h2:mem:batchDb
+spring.datasource.url=jdbc:h2:mem:batchDb;MODE=MYSQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=batch
 spring.datasource.password=password
